# AI-Accountability-Infrastructure

./: .codecov.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPMENT.md  Dockerfile  INSTALL.md  LICENSE  MAINTAINERS.md  MAINTAINERS_GUIDE.md  MANIFEST.in  Makefile  NOTICE  QUICKSTART.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  THANKS  TROUBLESHOOTING.md  check_log.py  check_log_status.py  debug_keys.json  docker-compose.yml  final_receipt.json  manage_log.py  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  (+5 more)
.github/workflows/: ci.yml  validate-events.yml
ai_trust/: __init__.py  __main__.py
ai_trust/cli/: __init__.py  main.py
ai_trust/core/: db.py  merkle.py  receipt.py
ai_trust/core/canonicalization/: __init__.py
ai_trust/core/crypto/: __init__.py
ai_trust/core/models/: __init__.py
ai_trust/services/log/: server.py
ai_trust/services/witness/: service.py
app/: main.py
claude_artifacts/: 6f841464-05b3-4f27-99c8-18b752f82798
config/: .env.example  debug_receipt.json  default.toml  fixed_new_receipt.json  fixed_receipt.json  keys.json  merkle_performance.prof  new_keys.json  new_receipt.json  reason_codes.yaml  receipt.json
data/: README.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SECURITY_AUDIT.md  api.rst  conf.py  contributing.rst  development.md  development.rst  getting-started.rst  index.rst  receipt_spec_v1.rst  verification_guide.md  wire-format.md
examples/: basic_usage.py  client_example.py  demo.py  requirements.txt  sample_receipt.json  test_cli.py
gatekeeper/: constants.py
jobs/: snapshot.py
keys/: README.md
log/: README.md  __init__.py  requirements.txt  server.py
schema/: receipt.schema.json
schemas/: gatekeeper.event.v1.json  receipt-v1.schema.json
schemas/vectors/invalid/: issued_at_bad.json  nonce_short.json  signature_bad.json
schemas/vectors/valid/: minimal.json  with_proof.json
scripts/: api.py  test_end_to_end.py
src/ai_trust/: __init__.py
src/ai_trust/api/: __init__.py  main.py
src/ai_trust/cli/: __init__.py  commands.py  main.py  verify.py
src/ai_trust/core/: __init__.py  app.py  db.py  merkle.py  receipt.py  verification.py
src/ai_trust/core/canonicalization/: __init__.py
src/ai_trust/core/crypto/: __init__.py
src/ai_trust/core/models/: __init__.py
src/ai_trust/services/log/: server.py
src/ai_trust/services/verifier/: README.md  verifier.py
src/ai_trust/services/witness/: service.py
src/ai_trust/tests/unit/: test_log.py  test_verifier.py
src/ai_trust/tests/unit/performance/: test_merkle_performance.py
tests/: test_log.py  test_merkle.py  test_pocket_verifier.py  test_verifier.py
tests/js/: test-schema.js
tests/unit/: test_canonicalization.py  test_core.py  test_gatekeeper_event_schema.py  test_receipt_schema.py
tools/: generate_keys.py  generate_receipt.py  pocket_verify.py  sign_receipt.py  synthetic.py  verify_receipt.py
verifier/: README.md  __init__.py  pocket_verifier.py  verifier.py  verify.py
