[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trust"
description = "AI Accountability Infrastructure"
readme = "README.md"
authors = [
    {name = "AI Trust Team", email = "team@aitrust.example.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.95.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "pyjwt>=2.6.0",
    "httpx>=0.23.0",
    "uvicorn>=0.21.0",
    "typing-extensions>=4.5.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "hypothesis>=6.70.0",
    "faker>=17.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ai-accountability-infrastructure"
Documentation = "https://ai-accountability-infrastructure.readthedocs.io/"
Repository = "https://github.com/your-org/ai-accountability-infrastructure"
Changelog = "https://github.com/your-org/ai-accountability-infrastructure/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }
packages = find:

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_trust*"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
no_implicit_optional = true
strict_optional = true

[project.scripts]
ai-trust = "ai_trust.cli.main:main"
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --cov=ai_trust --cov-report=term-missing"

[project.urls]
Homepage = "https://github.com/yourorg/ai-trust"
Documentation = "https://ai-trust.readthedocs.io"
Changelog = "https://github.com/yourorg/ai-trust/blob/main/CHANGELOG.md"
Issues = "https://github.com/yourorg/ai-trust/issues"
Source = "https://github.com/yourorg/ai-trust"
